app/apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apa-deployment
  labels:
    app: apa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apa
  template:
    metadata:
      labels:
        app: apa
    spec:
      containers:
      - name: apa
        image: httpd
        ports:
          - containerPort: 80
        resources:
            requests:
              cpu: 500m # 0.5
            limits:
              cpu: 1000m # 1
---
apiVersion: v1
kind: Service
metadata:
  name: apa-service
spec:
  selector:
    app: apa
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
