app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 770681373682.dkr.ecr.us-east-1.amazonaws.com/test123:29:28:27 
        ports:
          - containerPort: 80
        resources:
            requests:
              cpu: 500m # 0.5
            limits:
              cpu: 1000m # 1
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
